# yesod-auth-oauth2

./: stack.yaml  yesod-auth-oauth2.cabal
