name:            yesod-auth-oauth2
version:         0.2.4
license:         BSD3
license-file:    LICENSE
author:          Tom Streller
maintainer:      Pat Brisbin <pat@thoughtbot.com>
synopsis:        OAuth 2.0 authentication plugins
description:     Library to authenticate with OAuth 2.0 for Yesod web applications.
category:        Web
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/thoughtbot/yesod-auth-oauth2

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

flag example
  description: Build the example application
  default: False

library
    if flag(network-uri)
        build-depends: network-uri >= 2.6
    else
        build-depends: network < 2.6

    build-depends:   base
                   , bytestring
                   , http-client
                   , http-conduit
                   , http-types
                   , aeson
                   , yesod-core
                   , authenticate
                   , random
                   , yesod-auth
                   , text
                   , yesod-form
                   , transformers
                   , hoauth2
                   , lifted-base
                   , vector

    exposed-modules: Yesod.Auth.OAuth2
                     Yesod.Auth.OAuth2.Github
                     Yesod.Auth.OAuth2.Google
                     Yesod.Auth.OAuth2.Spotify
                     Yesod.Auth.OAuth2.Upcase
                     Yesod.Auth.OAuth2.EveOnline
                     Yesod.Auth.OAuth2.Nylas
                     Yesod.Auth.OAuth2.Slack
                     Yesod.Auth.OAuth2.Salesforce
                     Yesod.Auth.OAuth2.Bitbucket

    ghc-options:     -Wall

executable yesod-auth-oauth2-example
  if flag(example)
    buildable: True
  else
    buildable: False

  hs-source-dirs:      example
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , http-conduit
                     , load-env
                     , text
                     , warp
                     , yesod
                     , yesod-auth
                     , yesod-auth-oauth2

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -Wall
  build-depends:   base
                 , yesod-auth-oauth2
                 , hspec

source-repository head
  type:     git
  location: https://github.com/thoughtbot/yesod-auth-oauth2.git
